--- a/project/src/index.css
+++ b/project/src/index.css
@@ -18,7 +18,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+/* scrollbar style */
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #FFC24B; 
+  border-radius: 10px;
+}
 /* styles start */
 .menu__container{
   background-color: #030114 !important;
@@ -73,6 +84,53 @@ code {
   /* background-position: center; */
   /* background-repeat: no-repeat; */
   color: #fff;
+  /* background-attachment: fixed; */
+}
+/* .mainapp__container:hover .mainapp__Sec,
+.mainapp__container:hover .mainapp__Sec1,
+.mainapp__container:hover .mainapp__Sec2{
+  display: none;
+  animation: mover1 1s infinite  alternate;
+} */
+/* @-webkit-keyframes mover1 {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(10px); }
+}
+@keyframes mover1 {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(10px); }
+} */
+.mainapp__Sec{
+  background-image: url('./Assets/Images/bannerM.svg ');
+  /* background-color: #561287; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  width: 100%;
+  height: 480px;
+  position: absolute;
+  top: 50px;
+  animation: mover 1s infinite  alternate;
+}
+.mainapp__Sec1{
+  position: absolute;
+  left: 0px;
+  animation: mover 1s infinite  alternate;
+}
+.mainapp__Sec2{
+  position: absolute;
+  bottom: 30px;
+  right: 0px;
+  -webkit-animation: mover 1s infinite  alternate;
+  animation: mover 1s infinite  alternate;
+}
+@-webkit-keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
 }
 .mainapp__section{
   width: 90%;
@@ -87,6 +145,12 @@ code {
 }
 .poweredby__img{
   width: 180px;
+}
+.mainapp__section{
+  position: relative;
+}
+.mainapp__innerSec{
+  
 }
 .mainapp__section h1{
   font-size: 48px;
@@ -108,6 +172,7 @@ code {
   color: #030114;
   font-weight: 600;
   margin-top: 10px;
+  cursor: pointer;
 }
 .ourBrand__container{
   width: 90%;
@@ -183,6 +248,7 @@ code {
   border-radius: 5px;
   font-weight: 600;
   border: 0px;
+  cursor: pointer;
 }
 .section__item2 button{
   background-color: #FFC24B;
@@ -192,6 +258,7 @@ code {
   border-radius: 5px;
   font-weight: 600;
   border: 0px;
+  cursor: pointer;
 }
 .detailsInner{
   position: relative;
@@ -315,12 +382,19 @@ code {
 .img__style7{
   width: 145px;
   height: 41px;
+  transition: all 0.5s ease;
 }
 .img__style8{
   width: 145px;
   height: 72px;
   position: relative;
   top: -20px;
+  transition: all 0.5s ease;
+}
+.img__style7:hover, .img__style8:hover {
+  filter: brightness(0.2);
+  transform: scale(1.05);
+  cursor: pointer;
 }
 .divider__CollaborationsComp{
   width: 100%;
@@ -358,6 +432,7 @@ code {
   border-radius: 5px;
   border: 0px;
   font-weight: 600;
+  cursor: pointer;
 }
 .contact__container{
   background-color: #030114;
@@ -429,6 +504,7 @@ code {
   border-radius: 5px;
   border: 0px;
   margin-top: 10px;
+  cursor: pointer;
 }
 /* media */
 @media only screen and (max-width: 1324px) {
