--- a/project/src/index.css
+++ b/project/src/index.css
@@ -37,7 +37,7 @@ code {
   top:0px;
   z-index: 999;
   width: 100%;
-  border-bottom: 2px solid #b2ade7;
+  border-bottom: 1px solid #EEE;
 }
 .menu__section{
   display: flex !important;
@@ -62,7 +62,7 @@ code {
 .nav-link.active {
   font-weight: bold;
   color: #FFC24B !important;
-  border: 1px solid #FFC24B !important;
+  /* border: 1px solid #FFC24B !important; */
 }
 .navbar-collapse .navbar-nav{
   width: 100% !important;
@@ -73,6 +73,7 @@ code {
   color: #fff;
   border: 1px solid transparent;
   font-weight: 600 !important;
+  cursor: pointer;
 }
 .navbar-toggler{
   background-color: #fff !important;
@@ -106,24 +107,24 @@ code {
   /* background-color: #561287; */
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   width: 100%;
   height: 480px;
   position: absolute;
   top: 50px;
-  animation: mover 1s infinite  alternate;
+  /* animation: mover 1s infinite  alternate; */
 }
 .mainapp__Sec1{
   position: absolute;
   left: 0px;
-  animation: mover 1s infinite  alternate;
+  /* animation: mover 1s infinite  alternate; */
 }
 .mainapp__Sec2{
   position: absolute;
   bottom: 50px;
   right: 0px;
-  -webkit-animation: mover 1s infinite  alternate;
-  animation: mover 1s infinite  alternate;
+  /* -webkit-animation: mover 1s infinite  alternate; */
+  /* animation: mover 1s infinite  alternate; */
 }
 @-webkit-keyframes mover {
   0% { transform: translateY(0); }
@@ -197,18 +198,18 @@ code {
   height: auto;
 }
 .section__item1{
-  width: 49%;
+  width: 48.5%;
   background-color: #FFF0F0;
   background: #FFF0F0 0% 0% no-repeat padding-box;
   border-radius: 20px;
-  padding: 20px;
+  padding: 30px;
 }
 .section__item2{
-  width: 49%;
+  width: 48.5%;
   background-color: #E8F4FF;
   background: #E8F4FF 0% 0% no-repeat padding-box;
   border-radius: 20px;
-  padding: 20px;
+  padding: 30px;
 }
 .section__innerItem{
   display: flex;
@@ -219,16 +220,18 @@ code {
   color: #5F0B05;
   font-weight: 500;
   font-size: 16px;
+  line-height: 26px;
 }
 .section__item2 p{
   color: #093053;
   font-weight: 500;
   font-size: 16px;
+  line-height: 26px;
 }
 .networkingText1{
   color: #5F0B05;
   font-weight: 800;
-  font-size: 28px;
+  font-size: 30px;
   padding-left: 12px;
   position: relative;
   top:4px;
@@ -236,7 +239,7 @@ code {
 .networkingText2{
   color: #093053;
   font-weight: 800;
-  font-size: 28px;
+  font-size: 30px;
   padding-left: 12px;
   position: relative;
   top:4px;
@@ -263,7 +266,7 @@ code {
 }
 .detailsInner{
   position: relative;
-  margin: 30px 0px;
+  margin: 45px 0px;
 }
 .dividerDiv{
   width: 100%;
@@ -288,10 +291,12 @@ code {
 .section__item1>ul>li{
   color: #5F0B05;
   font-weight: 500;
+  line-height: 26px;
 }
 .section__item2>ul>li{
   color: #093053;
   font-weight: 500;
+  line-height: 26px;
 }
 .b2b__container{
   width: 100%;
@@ -305,7 +310,7 @@ code {
   background-color: #561287;
   color: #fff;
   border-radius: 20px;
-  padding: 40px 20px;
+  padding: 40px 40px;
 }
 .b2b__section h1{
   font-size: 36px;
@@ -324,6 +329,7 @@ code {
   width: 30%;
   text-align: center;
   padding-bottom: 10px;
+  padding-top: 20px;
 }
 .b2b__exp__item h2{
   font-size: 20px;
