--- a/project/src/index.css
+++ b/project/src/index.css
@@ -369,7 +369,9 @@ margin-top: 5px;
 .internationalComp__innersection{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  column-gap: 20px;
+  /* justify-content: space-between; */
+  justify-content: center;
   flex-wrap: wrap;
   margin: 0px 0px 60px 0px;
 }
@@ -412,11 +414,11 @@ margin-top: 5px;
   top: -20px;
   transition: all 0.5s ease;
 }
-.img__style7:hover, .img__style8:hover {
+/* .img__style7:hover, .img__style8:hover {
   filter: brightness(0.2);
   transform: scale(1.05);
   cursor: pointer;
-}
+} */
 .divider__CollaborationsComp{
   width: 100%;
   height: 1px;
