--- a/project/src/index.css
+++ b/project/src/index.css
@@ -125,7 +125,7 @@ margin-top: 5px;
 }
 .mainapp__Sec2{
   position: absolute;
-  bottom: 50px;
+  bottom: -70px;
   right: 0px;
   /* -webkit-animation: mover 1s infinite  alternate; */
   /* animation: mover 1s infinite  alternate; */
@@ -156,7 +156,7 @@ margin-top: 5px;
   position: relative;
 }
 .mainapp__innerSec{
-  
+  position: absolute;
 }
 .mainapp__section h1{
   font-size: 48px;
@@ -601,6 +601,7 @@ margin-top: 5px;
 @media only screen and (max-width: 544px) {
   .mainapp__section {
     padding: 50px 0px 0px 0px;
+    height: 604px;
 }
 .mainapp__Sec2 {
   bottom: -33px;
@@ -659,4 +660,7 @@ margin-top: 5px;
   .mainapp__container{
     height: auto !important;
   }
+  .mainapp__section p {
+    font-size: 16px;
+}
 }
